dev_ws/log/build_2021-03-17_15-00-40/py_pubsub/stderr.log
  File "/home/mingyu/dev_ws/install/py_pubsub/lib/python3.8/site-packages/py_pubsub/publisher_member_function.py", line 28
    global data_list = string.decode().split(',')
                     ^
SyntaxError: invalid syntax

